# python-aapclient

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml
.cursor/rules/: README.mdc  development-standards.mdc  project.mdc
aapclient/: __init__.py  shell.py
aapclient/common/: __init__.py  basecommands.py  client.py  clientmanager.py  config.py  constants.py  exceptions.py  functions.py  ping.py  status.py  whoami.py
aapclient/common/.cursor/rules/: utilities.mdc
aapclient/controller/: __init__.py  client.py  credential.py  execution_environment.py  host.py  instance.py  instance_group.py  inventory.py  project.py
aapclient/controller/.cursor/rules/: host-commands.mdc
aapclient/controller/v2/: __init__.py  credential.py  execution_environment.py  group.py  host.py  host_metrics.py  instance.py  instance_group.py  inventory.py  job.py  job_template.py  project.py
aapclient/eda/: __init__.py
aapclient/gateway/: __init__.py  organization.py  team.py  user.py
aapclient/gateway/v1/: __init__.py  application.py  organization.py  team.py  token.py  user.py
