[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-aapclient"
version = "0.1.0"
description = "Command-line client for Ansible Automation Platform (AAP)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AAP Client Team", email = "team@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cliff>=4.4.0",
    "requests>=2.28.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/jce-redhat/python-aapclient"
"Bug Tracker" = "https://github.com/jce-redhat/python-aapclient/issues"

[project.entry-points."aap.common"]
ping = "aapclient.common.ping:PingCommand"
status = "aapclient.common.status:StatusCommand"
whoami = "aapclient.common.whoami:WhoamiCommand"

[project.entry-points."aap.gateway"]
"organization list" = "aapclient.gateway.organization:OrganizationListCommand"
"organization show" = "aapclient.gateway.organization:OrganizationShowCommand"
"organization create" = "aapclient.gateway.organization:OrganizationCreateCommand"
"organization set" = "aapclient.gateway.organization:OrganizationSetCommand"
"organization delete" = "aapclient.gateway.organization:OrganizationDeleteCommand"
"user list" = "aapclient.gateway.user:UserListCommand"
"user show" = "aapclient.gateway.user:UserShowCommand"
"user create" = "aapclient.gateway.user:UserCreateCommand"
"user set" = "aapclient.gateway.user:UserSetCommand"
"user delete" = "aapclient.gateway.user:UserDeleteCommand"
"team list" = "aapclient.gateway.team:TeamListCommand"
"team show" = "aapclient.gateway.team:TeamShowCommand"
"team create" = "aapclient.gateway.team:TeamCreateCommand"
"team set" = "aapclient.gateway.team:TeamSetCommand"
"team delete" = "aapclient.gateway.team:TeamDeleteCommand"

[project.scripts]
aap = "aapclient.shell:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aapclient*"]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
