[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-aapclient"
version = "0.1.0"
description = "Command-line client for Ansible Automation Platform (AAP)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "AAP Client Team", email = "team@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cliff>=4.4.0",
    "requests>=2.28.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/jce-redhat/python-aapclient"
"Bug Tracker" = "https://github.com/jce-redhat/python-aapclient/issues"

[project.entry-points."aap.common"]
ping = "aapclient.common.ping:PingCommand"
status = "aapclient.common.status:StatusCommand"
whoami = "aapclient.common.whoami:WhoamiCommand"

[project.entry-points."aap.gateway"]
"organization list" = "aapclient.gateway.v1.organization:OrganizationListCommand"
"organization show" = "aapclient.gateway.v1.organization:OrganizationShowCommand"
"organization create" = "aapclient.gateway.v1.organization:OrganizationCreateCommand"
"organization set" = "aapclient.gateway.v1.organization:OrganizationSetCommand"
"organization delete" = "aapclient.gateway.v1.organization:OrganizationDeleteCommand"
"user list" = "aapclient.gateway.v1.user:UserListCommand"
"user show" = "aapclient.gateway.v1.user:UserShowCommand"
"user create" = "aapclient.gateway.v1.user:UserCreateCommand"
"user set" = "aapclient.gateway.v1.user:UserSetCommand"
"user delete" = "aapclient.gateway.v1.user:UserDeleteCommand"
"team list" = "aapclient.gateway.v1.team:TeamListCommand"
"team show" = "aapclient.gateway.v1.team:TeamShowCommand"
"team create" = "aapclient.gateway.v1.team:TeamCreateCommand"
"team set" = "aapclient.gateway.v1.team:TeamSetCommand"
"team delete" = "aapclient.gateway.v1.team:TeamDeleteCommand"
"token list" = "aapclient.gateway.v1.token:TokenListCommand"
"token show" = "aapclient.gateway.v1.token:TokenShowCommand"
"token create" = "aapclient.gateway.v1.token:TokenCreateCommand"
"token set" = "aapclient.gateway.v1.token:TokenSetCommand"
"token delete" = "aapclient.gateway.v1.token:TokenDeleteCommand"
"application list" = "aapclient.gateway.v1.application:ApplicationListCommand"
"application show" = "aapclient.gateway.v1.application:ApplicationShowCommand"
"application create" = "aapclient.gateway.v1.application:ApplicationCreateCommand"
"application set" = "aapclient.gateway.v1.application:ApplicationSetCommand"
"application delete" = "aapclient.gateway.v1.application:ApplicationDeleteCommand"

[project.entry-points."aap.controller"]
"project list" = "aapclient.controller.v2.project:ProjectListCommand"
"project show" = "aapclient.controller.v2.project:ProjectShowCommand"
"project create" = "aapclient.controller.v2.project:ProjectCreateCommand"
"project set" = "aapclient.controller.v2.project:ProjectSetCommand"
"project delete" = "aapclient.controller.v2.project:ProjectDeleteCommand"
"credential list" = "aapclient.controller.v2.credential:CredentialListCommand"
"credential show" = "aapclient.controller.v2.credential:CredentialShowCommand"
"credential create" = "aapclient.controller.v2.credential:CredentialCreateCommand"
"credential set" = "aapclient.controller.v2.credential:CredentialSetCommand"
"credential delete" = "aapclient.controller.v2.credential:CredentialDeleteCommand"
"execution-environment list" = "aapclient.controller.v2.execution_environment:ExecutionEnvironmentListCommand"
"execution-environment show" = "aapclient.controller.v2.execution_environment:ExecutionEnvironmentShowCommand"
"execution-environment create" = "aapclient.controller.v2.execution_environment:ExecutionEnvironmentCreateCommand"
"execution-environment set" = "aapclient.controller.v2.execution_environment:ExecutionEnvironmentSetCommand"
"execution-environment delete" = "aapclient.controller.v2.execution_environment:ExecutionEnvironmentDeleteCommand"
"inventory list" = "aapclient.controller.v2.inventory:InventoryListCommand"
"inventory show" = "aapclient.controller.v2.inventory:InventoryShowCommand"
"inventory create" = "aapclient.controller.v2.inventory:InventoryCreateCommand"
"inventory set" = "aapclient.controller.v2.inventory:InventorySetCommand"
"inventory delete" = "aapclient.controller.v2.inventory:InventoryDeleteCommand"
"inventory variables show" = "aapclient.controller.v2.inventory:InventoryVariablesShowCommand"
"instance list" = "aapclient.controller.v2.instance:InstanceListCommand"
"instance show" = "aapclient.controller.v2.instance:InstanceShowCommand"
"instance create" = "aapclient.controller.v2.instance:InstanceCreateCommand"
"instance set" = "aapclient.controller.v2.instance:InstanceSetCommand"
"instance-group list" = "aapclient.controller.v2.instance_group:InstanceGroupListCommand"
"instance-group show" = "aapclient.controller.v2.instance_group:InstanceGroupShowCommand"
"instance-group create" = "aapclient.controller.v2.instance_group:InstanceGroupCreateCommand"
"instance-group set" = "aapclient.controller.v2.instance_group:InstanceGroupSetCommand"
"instance-group delete" = "aapclient.controller.v2.instance_group:InstanceGroupDeleteCommand"
"job list" = "aapclient.controller.v2.job:JobListCommand"
"job show" = "aapclient.controller.v2.job:JobShowCommand"
"host list" = "aapclient.controller.v2.host:HostListCommand"
"host show" = "aapclient.controller.v2.host:HostShowCommand"
"host create" = "aapclient.controller.v2.host:HostCreateCommand"
"host set" = "aapclient.controller.v2.host:HostSetCommand"
"host delete" = "aapclient.controller.v2.host:HostDeleteCommand"
"host groups list" = "aapclient.controller.v2.host:HostGroupsListCommand"
"host metrics list" = "aapclient.controller.v2.host_metrics:HostMetricsListCommand"
"host metrics show" = "aapclient.controller.v2.host_metrics:HostMetricsShowCommand"
"host metrics delete" = "aapclient.controller.v2.host_metrics:HostMetricsDeleteCommand"
"host variables show" = "aapclient.controller.v2.host:HostVariablesShowCommand"
"group list" = "aapclient.controller.v2.group:GroupListCommand"
"group show" = "aapclient.controller.v2.group:GroupShowCommand"
"group create" = "aapclient.controller.v2.group:GroupCreateCommand"
"group set" = "aapclient.controller.v2.group:GroupSetCommand"
"group delete" = "aapclient.controller.v2.group:GroupDeleteCommand"
"group hosts list" = "aapclient.controller.v2.group:GroupHostsListCommand"
"group hosts add" = "aapclient.controller.v2.group:GroupHostsAddCommand"
"group hosts remove" = "aapclient.controller.v2.group:GroupHostsRemoveCommand"
"group children list" = "aapclient.controller.v2.group:GroupChildrenListCommand"
"group children add" = "aapclient.controller.v2.group:GroupChildrenAddCommand"
"group children remove" = "aapclient.controller.v2.group:GroupChildrenRemoveCommand"
"group variables show" = "aapclient.controller.v2.group:GroupVariablesShowCommand"

[project.scripts]
aap = "aapclient.shell:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aapclient*"]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
